# bigraph-schema

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  devenv.nix  pyproject.toml  release.sh  requirements.txt  setup.py  test_matrix.py  tests.py  uv.what
.claude/plans/: milner-formalism.md
.github/workflows/: notebook_to_html.yml  pytest.yml  release.yml
bigraph-schema/: plot.py  registry.py  schema.py
bigraph_schema/: __init__.py  assembly.py  base_types.py  bigraph.py  calculi.py  core.py  data_model.py  edge.py  infer.py  json_codec.py  library.py  operation.py  parse.py  protocols.py  react.py  registry.py  runtime.py  schema.py  template.py  test.py  tests.py  type_functions.py  type_system.py  type_system_adjunct.py  type_system_tests.py  units.py  utilities.py
bigraph_schema/bigraph/: basis.py  placement.py
bigraph_schema/methods/: __init__.py  apply.py  bind.py  bundle.py  check.py  coerce.py  compile_apply.py  context.py  default.py  derive.py  deserialize.py  diff.py  divide.py  events.py  generalize.py  generate.py  handle_parameters.py  infer.py  is_empty.py  jump.py  merge.py  patch.py  realize.py  reconcile.py  render.py  resolve.py  select.py  serialize.py  slice.py  transform.py  traverse.py  unify.py  validate.py  walk.py
bigraph_schema/package/: __init__.py  discover.py
doc/: composite_algebra.md  method_api_spec.md  reconcile_audit.md
examples/: examples.py
lamin/: schema.py
notebooks/: _build_units_notebook.py  core.html  core.ipynb  demo.html  demo.ipynb  units.html  units.ipynb
