[project]
name = "bigraph-schema"
version = "1.0.3"
description = "A serializable type schema for compositional systems biology"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Eran Agmon"},
  {name = "Ryan Spangler"}
]
dependencies = [
    "fire",
    "ipdb",
    "numpy",
    "orjson",
    "pandas",
    "parsimonious",
    "pint",
    "plum-dispatch",
    "pytest",
    "requests>=2.31.0",
    "setuptools",
    "twine>=4.0.2",
]

[tool.setuptools]
packages = [
    "bigraph_schema",
    "bigraph_schema.methods",
    "bigraph_schema.package",
]
