[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bigraph-schema"
version = "1.2.7"
description = "A serializable type schema for compositional systems biology"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Eran Agmon"},
  {name = "Ryan Spangler"}
]
dependencies = [
    "fire",
    "numpy",
    "orjson",
    "pandas",
    "parsimonious",
    "pint",
    "plum-dispatch",
    "requests>=2.31.0",
]

[dependency-groups]
dev = [
    "ipdb",
    "pytest",
    "pytest-cov",
]

[tool.setuptools]
packages = [
    "bigraph_schema",
    "bigraph_schema.methods",
    "bigraph_schema.package",
]
